--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,24 @@
 *:after {
   box-sizing: border-box;
 }
+a, a:before, a:after{
+  text-decoration: none;
+  color: black;
+}
+ul {
+  padding: 0;
+  margin: 0;
+}
+nav {
+  color: white;
+  background-color: black;
+}
+nav li{
+  list-style: none;
+  padding: 15px 0;
+}
+nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
