--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,49 @@
 <h1>Welcome to CSE Motors!</h1>
+<div>
+    <img class="carImage" src="/images/vehicles/delorean.jpg" alt="Drawing of a delorean car">
+    <div class="banner">
+        <h2>DMC Delorean</h2>
+        <p>3 Cup holders<br>Superman doors<br>Fuzzy dice!</p>
+        <img src="/images/site/own_today.png" alt="">
+    </div>
+</div>
+<div class="bottom-page">
+    <div class="reviews">
+        <h2>DMC Delorean Reviews</h2>
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+    </div>
+
+    <div class="upgrades">
+        <h2>Delorean Upgrades</h2>
+        <div>
+            <div class="background">
+                <img src="/images/upgrades/flux-cap.png" alt="">
+            </div>
+            <a href="/">Flux Capacitor</a>
+        </div>
+        <div>
+            <div class="background">
+                <img src="/images/upgrades/flame.jpg" alt="">
+            </div>
+            <a href="/">Flame Decals</a>
+        </div>
+        <div>
+            <div class="background">
+                <img src="/images/upgrades/bumper_sticker.jpg" alt="">
+            </div>
+            <a href="/">Bumper Stickers</a>
+        </div>
+        <div>
+            <div class="background">
+                <img src="/images/upgrades/hub-cap.jpg" alt="">
+            </div>
+            <a href="/">Hub Caps</a>
+        </div>
+    </div>
+</div>
