--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
-<%- messages() %>
+<%#- messages() %>
 <div>
     <img class="carImage" src="/images/vehicles/delorean.jpg" alt="Drawing of a delorean car">
     <div class="banner">
