--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,7 +6,19 @@
 } %>
 
 <!-- Flash Message -->
-<%- messages() %>
+<%#- messages() %>
 
 <!-- login -->
-<%- form %>
+<form id="loginForm" action="/account/login" method="post">
+  <div>
+    <label for="account_email">Email:<br>
+      <input type="email" name="account_email" required>
+    </label>
+    <label for="account_password">Password:<br>
+      <input type="password" name="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
+      <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span> 
+    </label>
+  </div>
+  <button>Login</button>
+  <p>No account? <a href="/account/register">Sign-up</a></p>
+  </form>
