--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -132,8 +132,8 @@ nav ul {
 form {
   background-color: #1a3c59;
   color: white;
-  padding: 1.3em;
-  width: 70vw;
+  padding: 1.5em 2.5em;
+  width: 35vw;
   height: auto;
   margin: 10px auto;
   text-align: center;
@@ -146,6 +146,22 @@ form label {
   flex-direction: column;
   margin: 20px 0;
   text-align: left;
+}
+label input {
+  padding: 5px 10px;
+  margin-top: 5px;
+}
+form span {
+  margin: 10px 0;
+}
+form button {
+  background-color: white;
+  border: none;
+  color: #1a3c59;
+  font-size: 1.2em;
+  font-weight: 600;
+  padding: 10px 20px;
+  border-radius: 10px;
 }
 form a {
   color: white;
