--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -12,7 +12,7 @@
 <form id="loginForm" action="/account/login" method="post">
   <div>
     <label for="account_email">Email:<br>
-      <input type="email" name="account_email" required>
+      <input type="email" name="account_email" id="accountEmail" required value="<%= locals.account_email %>">
     </label>
     <label for="account_password">Password:<br>
       <input type="password" name="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
