--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,7 +53,7 @@ nav ul {
   min-width: 300px;
 }
 .background {
-  background-color: #4d96d6;
+  background-color: #356691;
 }
 .upgrades{
   display: grid;
@@ -69,7 +69,7 @@ nav ul {
   position: absolute;
   top: 20%;
   background-color: rgba(255, 255, 255, 0.4);
-  color: #4d96d6;
+  color: #356691;
   font-weight: 700;
   font-size: 1em;
 }
@@ -96,7 +96,7 @@ nav ul {
 .upgrades div div {
   width: 200px;
   height: 100px;
-  box-shadow: inset 0px 0px 5px 3px #356691;
+  box-shadow: inset 0px 0px 5px 3px #1a3c59;
 }
 .bottom-page {
   max-width: 900px;
@@ -132,8 +132,8 @@ nav ul {
 form {
   background-color: #1a3c59;
   color: white;
-  padding: 1.5em 2.5em;
-  width: 35vw;
+  padding: 25px 40px;
+  width: 430px;
   height: auto;
   margin: 10px auto;
   text-align: center;
@@ -163,8 +163,20 @@ form button {
   padding: 10px 20px;
   border-radius: 10px;
 }
-form a {
+form a , button a{
   color: white;
+}
+button {
+  background-color: #1a3c59;
+  border: none;
+  font-size: 1.2em;
+  font-weight: 600;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+#inv_description {
+  width: 350px;
 }
 
 @media screen and (min-width: 800px) {
