--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -6,48 +6,48 @@
 } %>
 
 <!-- Message Block -->
-<% if (locals.messages){} %>
+<% if (locals.message){messages()} %>
 
 <!-- Display form -->
-<form action="/inventory/add-inventory" method="post">
+<form action="/inv/add-inventory" method="post">
     <label for="classification_name">Classification<br>
         <%- dropDown %>
     </label>
 
     <label for="inv_make">Make<br>
-        <input type="text" name="inv_make" id="inv_make" required value="<%= locals.inv_make %>">
+        <input type="text" name="inv_make" id="invMake" pattern="^[A-Za-z]+$" required value="<%= locals.inv_make %>">
     </label>
 
     <label for="inv_model">Model<br>
-        <input type="text" name="inv_model" id="inv_model" required value="<%= locals.inv_model %>">
+        <input type="text" name="inv_model" id="invModel" required value="<%= locals.inv_model %>">
     </label>
 
     <label for="inv_year">Year<br>
-        <input type="text" name="inv_year" id="inv_year" required value="<%= locals.inv_year %>">
+        <input type="text" name="inv_year" id="invYear" pattern="^[0-9]*$" required value="<%= locals.inv_year %>">
     </label>    
 
     <label for="inv_description">Description<br>
-        <textarea name="inv_description" id="inv_description" cols="30" rows="10" required value="<%= locals.inv_description %>"></textarea>
+        <textarea name="inv_description" id="invDescription" cols="30" rows="10" required value="<%= locals.inv_description %>"></textarea>
     </label>
 
     <label for="inv_image">Image path<br>
-        <input type="text" name="inv_image" id="inv_image" required value="<%= locals.inv_image %>">
+        <input type="text" name="inv_image" id="invImage" required value="<%= locals.inv_image %>">
     </label>
 
     <label for="inv_thumbnail">Thumbnail path<br>
-        <input type="text" name="inv_thumbnail" id="inv_thumbnail" required value="<%= locals.inv_thumbnail %>">
+        <input type="text" name="inv_thumbnail" id="invThumbnail" required value="<%= locals.inv_thumbnail %>">
     </label>
 
     <label for="inv_price">Price<br>
-        <input type="text" name="inv_price" id="inv_price" required value="<%= locals.inv_price %>">
+        <input type="text" name="inv_price" id="invPrice" pattern="^[0-9]*$" required value="<%= locals.inv_price %>">
     </label>
 
     <label for="inv_miles">Miles<br>
-        <input type="text" name="inv_miles" id="inv_miles" required value="<%= locals.inv_miles %>">
+        <input type="text" name="inv_miles" id="invMiles" pattern="^[0-9]*$" required value="<%= locals.inv_miles %>">
     </label>
 
     <label for="inv_color">Color<br>
-        <input type="text" name="inv_color" id="inv_color" required value="<%= locals.inv_color %>">
+        <input type="text" name="inv_color" id="invColor" required value="<%= locals.inv_color %>">
     </label>
 
     <button>Add</button>
