--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -5,6 +5,15 @@
       res.redirect('/')
 } %>
 
+<!-- Message Block -->
+<%- messages() %>
+<% if (errors) { %>
+    <ul class="notice">
+        <% errors.array().forEach(error => { %>
+            <li><%= error.msg %></li>
+        <% }) %>
+    </ul>
+<% } %>
+
 <!-- Display inventory items -->
 <%- grid %>
-
