--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -5,5 +5,15 @@
       res.redirect('/')
 } %>
 
+<!-- Message Block -->
+<%- messages() %>
+<% if (errors) { %>
+    <ul class="notice">
+        <% errors.array().forEach(error => { %>
+            <li><%= error.msg %></li>
+        <% }) %>
+    </ul>
+<% } %>
+
 <button><a href="/inv/add-classification">Add New Classification</a></button>
 <button><a href="/inv/add-inventory">Add New Inventory</a></button>
