add code for inv management + fix registration

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,3 +1,5 @@
+<script src="../../js/inventory.js"></script>
+
 <!-- Content Heading -->
 <% if (title) { %>
     <h1><%= title %></h1>
@@ -17,3 +19,11 @@
 
 <button><a href="/inv/add-classification">Add New Classification</a></button>
 <button><a href="/inv/add-inventory">Add New Inventory</a></button>
+
+<h2>Manage Inventory</h2>
+<p>Select a classification from the list to see the items belonging to the classification.</p>
+
+<%- dropDown %>
+<table id="inventoryDisplay"></table>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
