--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@
 *:before,
 *:after {
   box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Tahoma, sans-serif;
 }
 h2 {
   font-family: 'Times New Roman', Times, serif;
