--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -18,14 +18,15 @@
 <!-- login -->
 <form id="loginForm" action="/account/login" method="post">
   <div class="data-box">
-    <label for="account_email">Email:<br>
-      <input type="email" name="account_email" id="accountEmail" required value="<%= locals.account_email %>">
-    </label>
-    <label for="account_password">Password:<br>
-      <input type="password" name="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
-      <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span> 
-    </label>
+    <label for="account_email">Email:</label>
+    <input type="email" name="account_email" id="account_email" required value="<%= locals.account_email %>">
+
+    <label for="account_password">Password:</label>
+    <input type="password" name="account_password" id="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
+    
+    <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span>
   </div>
+  
   <button>Login</button>
   <p>No account? <a href="/account/register">Sign-up</a></p>
   </form>
