--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -18,19 +18,19 @@
 <!-- registration -->
 <form action="/account/register" method="post">
     <div class="data-box">
-        <label for="account_firstname">First Name
-            <input type="text" name="account_firstname" id="accountFirstname" required value="<%= locals.account_firstname %>">
-        </label>
-        <label for="account_lastname">Last Name
-            <input type="text" name="account_lastname" id="accountLastname" required value="<%= locals.account_lastname %>">
-        </label>
-        <label for="account_email">Email Address
-            <input type="email" name="account_email" id="accountEmail" required value="<%= locals.account_email %>">
-        </label>
-        <label for="account_password">Password
-            <input type="password" name="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
-            <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span>
-        </label>
+        <label for="account_firstname">First Name</label>
+        <input type="text" name="account_firstname" id="account_firstname" required value="<%= locals.account_firstname %>">
+
+        <label for="account_lastname">Last Name</label>
+        <input type="text" name="account_lastname" id="account_lastname" required value="<%= locals.account_lastname %>">
+
+        <label for="account_email">Email Address</label>
+        <input type="email" name="account_email" id="account_email" required value="<%= locals.account_email %>">
+
+        <label for="account_password">Password</label>
+        <input type="password" name="account_password" id="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
+        
+        <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span>
     </div>
     <button>Register</button>
 </form>
