--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,5 +1,3 @@
-<script src="../../js/inventory.js"></script>
-
 <!-- Content Heading -->
 <% if (title) { %>
     <h1><%= title %></h1>
@@ -17,8 +15,8 @@
     </ul>
 <% } %>
 
-<button><a href="/inv/add-classification">Add New Classification</a></button>
-<button><a href="/inv/add-inventory">Add New Inventory</a></button>
+<button onclick="window.location.href='/inv/add-classification'">Add New Classification</button>
+<button onclick="window.location.href='/inv/add-inventory'">Add New Inventory</button>
 
 <h2>Manage Inventory</h2>
 <p>Select a classification from the list to see the items belonging to the classification.</p>
@@ -27,3 +25,5 @@
 <table id="inventoryDisplay"></table>
 
 <noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="../../js/inventory.js"></script>
