--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -14,3 +14,10 @@
         <% }) %>
     </ul>
 <% } %>
+
+<% if (locals.accountData.account_type === "Admin" || locals.accountData.account_type === "Employee") { %>
+    <h3>Inventory Management</h3>
+    <p>
+        <a href="/inv">Inventory Management</a>
+    </p>
+<% } %>
