--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,13 @@
     <span class="siteName">
       <a href="/" title="Return to home page">CSE Motors</a>
     </span>
+    <% if (locals.loggedin) { %>
+      <a title="Click to see your Account" href="/account">
+        Welcome <%= locals.accountData.account_firstname %></a>
     <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
-      <a title="Click to log out" href="/account/login">Log Out</a>
+        <a title="Click to log out" href="/">Log Out</a>
+      <% } else { %>
+      <a title="Click to log in" href="/account/login">Log In</a>
+      <% } %>
     </div>
 </header>
