--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -14,10 +14,14 @@
         <% }) %>
     </ul>
 <% } %>
+<h2>Welcome <%= locals.accountData.account_firstname %></h2>
+<p>You're logged in</p>
+
+<a href="account/update/<%=locals.accountData.account_id%>">Edit Account Information</a>
 
 <% if (locals.accountData.account_type === "Admin" || locals.accountData.account_type === "Employee") { %>
     <h3>Inventory Management</h3>
     <p>
-        <a href="/inv">Inventory Management</a>
+        <a href="/inv">Edit Inventory</a>
     </p>
 <% } %>
