--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -16,7 +16,7 @@
 <% } %>
 
 <!-- Display form -->
-<form action="inv/edit" method="post" id="updateForm">
+<form action="/inv/update/" method="post" id="updateForm">
     <div class="data-box">
         <label for="classificationList">Classification</label>
         <%- dropDown %>
@@ -25,30 +25,28 @@
         <input type="text" name="inv_make" id="inv_make" placeholder="e.g Harley-Davidson" required value="<%= locals.inv_make %>">
 
         <label for="inv_model">Model</label>
-        <input type="text" name="inv_model" id="inv_model" placeholder="e.g Heritage Softail Classic" required  value="<%= locals.inv_model %>">
+        <input type="text" name="inv_model" id="inv_model" placeholder="e.g Heritage Softail Classic" required value="<%= locals.inv_model %>">
 
         <label for="inv_year">Year</label>
-        <input type="text" name="inv_year" id="inv_year" pattern="^[0-9]*$" placeholder="e.g 2016" required value="<%= locals.inv_year %>">    
+        <input type="number" name="inv_year" id="inv_year" placeholder="e.g 2016" required value="<%= locals.inv_year %>">    
 
         <label for="inv_description">Description</label>
-        <textarea name="inv_description" id="inv_description" cols="30" rows="10" placeholder="Insert description here... " required>
-            <%= locals.inv_description %>
-        </textarea>
+        <textarea name="inv_description" id="inv_description" cols="30" rows="10" placeholder="Insert description here... " required><%= locals.inv_description %></textarea>
 
         <label for="inv_image">Image path</label>
-        <input type="text" name="inv_image" id="inv_image" pattern="(.*\.(jpe?g|png|webp|svg))" required value="<%= locals.inv_image %>public/images/vehicles/no-image.png">
+        <input type="text" name="inv_image" id="inv_image" pattern="(.*\.(jpe?g|png|webp|svg))" required value="<%= locals.inv_image %>">
 
         <label for="inv_thumbnail">Thumbnail path</label>
-        <input type="text" name="inv_thumbnail" id="inv_thumbnail" required pattern="(.*\.(jpe?g|png|webp|svg))" value="<%= locals.inv_thumbnail %>public/images/vehicles/no-image-tn.png">
+        <input type="text" name="inv_thumbnail" id="inv_thumbnail" required pattern="(.*\.(jpe?g|png|webp|svg))" value="<%= locals.inv_thumbnail %>">
 
         <label for="inv_price">Price</label>
-        <input type="text" name="inv_price" id="inv_price" pattern="^[0-9]*$" placeholder="e.g 13000" required  value="<%= locals.inv_price %>">
+        <input type="number" name="inv_price" id="inv_price" placeholder="e.g 13000" required value="<%= locals.inv_price %>">
 
         <label for="inv_miles">Miles</label>
-        <input type="text" name="inv_miles" id="inv_miles" pattern="^[0-9]*$" placeholder="e.g 500" required  value="<%= locals.inv_miles %>">
+        <input type="number" name="inv_miles" id="inv_miles" placeholder="e.g 500" required value="<%= locals.inv_miles %>">
 
         <label for="inv_color">Color</label>
-        <input type="text" name="inv_color" id="inv_color" placeholder="e.g Orange" required  value="<%= locals.inv_color %>">
+        <input type="text" name="inv_color" id="inv_color" placeholder="e.g Orange" required value="<%= locals.inv_color %>">
     </div>
     <button type="submit" disabled>Update Vehicle</button>
     
@@ -57,4 +55,4 @@
     <% } %>>
 </form>
 
-<script src="../../js/inv-update.js"></script>
+<script src="../../js/update.js"></script>
