--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
       <a title="Click to see your Account" href="/account">
         Welcome <%= locals.accountData.account_firstname %></a>
     <div id="tools">
-        <a title="Click to log out" href="/">Log Out</a>
+        <a title="Click to log out" href="/account/logout">Log Out</a>
       <% } else { %>
       <a title="Click to log in" href="/account/login">Log In</a>
       <% } %>
