--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h1>Welcome to CSE Motors!</h1>
 
-<div>
+<div class="carBox">
     <img class="carImage" src="/images/vehicles/delorean.jpg" alt="Drawing of a delorean car">
     <div class="banner">
         <h2>DMC Delorean</h2>
