--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,13 +2,11 @@
     <span class="siteName">
       <a href="/" title="Return to home page">CSE Motors</a>
     </span>
+
     <% if (locals.loggedin) { %>
-      <a title="Click to see your Account" href="/account">
-        Welcome <%= locals.accountData.account_firstname %></a>
-    <div id="tools">
-        <a title="Click to log out" href="/account/logout">Log Out</a>
-      <% } else { %>
-      <a title="Click to log in" href="/account/login">Log In</a>
-      <% } %>
-    </div>
+    <a title="Click to see your Account" href="/account">Welcome <%= locals.accountData.account_firstname %></a>
+    <a title="Click to log out" href="/account/logout">Log Out</a>
+    <% } else { %>
+    <a title="Click to log in" href="/account/login">Log In</a>
+    <% } %>
 </header>
